--- a/index.html
+++ b/index.html
@@ -35,20 +35,19 @@
                 <span class="buttons-ways select">یک طرفه</span>
             </div>
             <div class="travel-info">
-                <input placeholder="مبدا" type="text" name="{Cities}" list="cities-name">
-                <datalist id="cities-name">
-                    <select size="5" name="{Cities}" id="">
-                        <option value="تهران">تهران</option>
-                        <option value="شیراز">شیراز</option>
-                        <option value="اصفهان">اصفهان</option>
-                        <option value="یزد">یزد</option>
-                        <option value="اهواز">اهواز</option>
+                <form >
+                    <!-- <label for="cars"></label> -->
+                    <select name="cities" id="cities" >
+                      <option value=""></option>
+                      <option value="تهران">تهران</option>
+                      <option value="شیراز">شیراز</option>
+                      <option value="اهواز">اهواز</option>
+                      <option value="آبادان">آبادان</option>
                     </select>
-                </datalist>
-                <input type="text">
-                <input type="text">
-                <input type="text">
-                <input type="text">
+
+                    
+                    
+                  </form>
             </div>
 
 
