--- a/index.html
+++ b/index.html
@@ -59,9 +59,27 @@
 
     </header>
     <main>
-        <div class="banner">
-
+        <div class="banner"> </div>
+        <div class="travel-info">
+            <div class="buttons">
+                <button>رفت</button>
+                <button>ذفت و برگشت </button>
+                <button>چند سفره</button>
+            </div>
+            <div class="detail">
+                <input placeholder="مبدا" type="text">
+                <input placeholder="مقصد" type="text">
+                <input placeholder="تاریخ رفت و برگشت" type="text">
+                <input  placeholder="تعداد مسافر"type="text">
+                <input  placeholder="کلاس پرواز"type="text">
+                <button>
+                    <img src="" alt="">
+                    <span>جستجو</span>
+                </button>
+            </div>
+            
         </div>
+
 
 
     </main>
